src/style/Modal.css
body.active-modal {
    overflow-y: hidden;
}

.modal,
.overlay {
    z-index: 1;
    width: 100vw;
    height: 100vh;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    position: fixed;
}

.overlay {
    background: rgba(49, 49, 49, 0.8);
    z-index: 2;
}
.modal-content {
    z-index: 2;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    line-height: 1.4;
    background: var(--clr-bg);
    padding: 20px;
    border-radius: var(--card-border-radius);
    width: 80vw;
    max-height: 75vh;
    display: flex;
    gap: 20px;
    box-shadow: 0px 0px 25px 0px var(--box-shadow-color-dark);
}

.close-btn {
    font-size: 16px;
    position: absolute;
    top: 10px;
    right: 10px;
    padding: 5px;
    background: none;
    color: var(--clr-muted);
}

.modal-img {
    min-width: 40%;
    display: flex;
    flex-wrap: wrap;
    gap: 12px;
    justify-content: center;
    overflow-y: scroll;
    mask-image: linear-gradient(
        0deg,
        rgba(255, 255, 255, 0) 0%,
        rgba(0, 0, 0, 1) 5%,
        rgba(0, 0, 0, 1) 50%,
        rgba(0, 0, 0, 1) 95%,
        rgba(255, 255, 255, 0) 100%
    );
    padding: 20px 0;
}

.url-list {
    list-style-type: "🔗";
}

.modal-description {
    width: 100%;
    overflow-y: scroll;
    mask-image: linear-gradient(
        0deg,
        rgba(255, 255, 255, 0) 0%,
        rgba(0, 0, 0, 1) 5%,
        rgba(0, 0, 0, 1) 50%,
        rgba(0, 0, 0, 1) 95%,
        rgba(255, 255, 255, 0) 100%
    );
    padding: 20px 10px;
}
.modal-description > h3 {
    margin-top: 0px;
}

.modal-description::-webkit-scrollbar,
.modal-img::-webkit-scrollbar {
    background: none;
    width: 8px;
}

.modal-description::-webkit-scrollbar-track,
.modal-img::-webkit-scrollbar-track {
    border-radius: 10px;
}

.modal-description::-webkit-scrollbar-thumb,
.modal-img::-webkit-scrollbar-thumb {
    background: var(--clr-primary);
    border-radius: 10px;
}
.modal-description::-webkit-scrollbar-track-piece:end,
.modal-img::-webkit-scrollbar-track-piece:end {
    background: transparent;
    margin-bottom: 0;
}

.modal-description::-webkit-scrollbar-track-piece:start,
.modal-img::-webkit-scrollbar-track-piece:end {
    background: transparent;
    margin-top: 20px;
}

.modal-description::-webkit-scrollbar-button,
.modal-img::-webkit-scrollbar-button {
    visibility: hidden;
}

.modal-description > div > .tags-container {
    justify-content: left;
    gap: 8px;
}

.modal-description > div > .tags-container > .tag {
    cursor: auto;
}

